--- a/func.searchers.html
+++ b/func.searchers.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang='en'><head><title>[func.searchers]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.14</a> Function objects <a class='abbr_ref' href='function.objects#func.searchers'>[function.objects]</a></h2><div id='func.searchers'><h3 ><a class='secnum' style='min-width:103pt'>20.14.13</a> Searchers <a class='abbr_ref'>[func.searchers]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This sub-clause provides function object types (<a href='function.objects'>[function.objects]</a>) for
+<!DOCTYPE html><html lang='en'><head><title>[func.searchers]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.14</a> Function objects <a class='abbr_ref' href='function.objects#func.searchers'>[function.objects]</a></h2><div id='func.searchers'><h3 ><a class='secnum' style='min-width:103pt'>20.14.13</a> Searchers <a class='abbr_ref'>[func.searchers]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This subclause provides function object types (<a href='function.objects'>[function.objects]</a>) for
 operations that search for a sequence <span class='texttt'>[pat_first, <span class='discretionary'></span>pat_last)</span> in another
 sequence <span class='texttt'>[first, <span class='discretionary'></span>last)</span> that is provided to the object's function call
 operator.  The first sequence (the pattern to be searched for) is provided to
 the object's constructor, and the second (the sequence to be searched) is
-provided to the function call operator.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Each specialization of a class template specified in this sub-clause <a href='func.searchers'>[func.searchers]</a> shall meet the <span class='texttt'>CopyConstructible</span> and <span class='texttt'>CopyAssignable</span> requirements.
+provided to the function call operator.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Each specialization of a class template specified in this subclause <a href='func.searchers'>[func.searchers]</a> shall meet the <span class='texttt'>CopyConstructible</span> and <span class='texttt'>CopyAssignable</span> requirements.
 Template parameters named
 </p><ul ><li ><p ><span class='texttt'>ForwardIterator</span>,
 </p></li><li ><p ><span class='texttt'>ForwardIterator1</span>,
@@ -12,7 +12,7 @@ Template parameters named
 </p></li><li ><p ><span class='texttt'>RandomAccessIterator1</span>,
 </p></li><li ><p ><span class='texttt'>RandomAccessIterator2</span>, and
 </p></li><li ><p ><span class='texttt'>BinaryPredicate</span>
-</p></li></ul><p >of templates specified in this sub-clause
+</p></li></ul><p >of templates specified in this subclause
 <a href='func.searchers'>[func.searchers]</a> shall meet the same requirements and semantics as
 specified in <a href='algorithms.general'>[algorithms.general]</a>.
 Template parameters named <span class='texttt'>Hash</span> shall meet the requirements as specified in <a href='hash.requirements'>[hash.requirements]</a>.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >The Boyer-Moore searcher implements the Boyer-Moore search algorithm.
