--- a/meta.trans.html
+++ b/meta.trans.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang='en'><head><title>[meta.trans]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.15</a> Metaprogramming and type traits <a class='abbr_ref' href='meta#trans'>[meta]</a></h2><div id='meta.trans'><h3 ><a class='secnum' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref'>[meta.trans]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This sub-clause contains templates that may be used to transform one
+<!DOCTYPE html><html lang='en'><head><title>[meta.trans]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.15</a> Metaprogramming and type traits <a class='abbr_ref' href='meta#trans'>[meta]</a></h2><div id='meta.trans'><h3 ><a class='secnum' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref'>[meta.trans]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This subclause contains templates that may be used to transform one
 type to another following some predefined rule.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Each of the templates in this subclause shall be a
 <a class='hidden_link' href='#def:TransformationTrait' id='def:TransformationTrait'><i>TransformationTrait</i></a> (<a href='meta.rqmts'>[meta.rqmts]</a>).</p></div><div id='cv'><h4 ><a class='secnum' href='#cv' style='min-width:118pt'>20.15.7.1</a> Const-volatile modifications <a class='abbr_ref' href='meta.trans.cv'>[meta.trans.cv]</a></h4><div class='numberedTable' id='tab:type-traits.const-volatile'>Table <a href='#tab:type-traits.const-volatile'>38</a> — Const-volatile modifications<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span><span class='indexparent'><a class='index' id='remove_const'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
@@ -43,7 +43,7 @@ type to another following some predefined rule.</p></div><div class='para' id='2
  member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T1</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_lvalue_reference'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_lvalue_reference;</span>                     </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type then
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) then
  the member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T&amp;</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.
  [&nbsp;<i>Note:</i><span class='space'></span>
@@ -117,7 +117,7 @@ assert((is_same_v&lt;remove_all_extents_t&lt;int[][3]&gt;, int&gt;));
  to <span class='texttt'>T1</span>” then the member typedef <span class='texttt'>type</span>
  shall name <span class='texttt'>T1</span>; otherwise, it shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_pointer'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_pointer;</span>                       </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type or a
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) or a
  (possibly cv-qualified) <span class='texttt'>void</span> type then
  the member typedef <span class='texttt'>type</span> shall name the same type as
  <span class='texttt'>remove_reference_t&lt;T&gt;*</span>;
