--- a/meta.trans.ptr.html
+++ b/meta.trans.ptr.html
@@ -5,7 +5,7 @@
  to <span class='texttt'>T1</span>” then the member typedef <span class='texttt'>type</span>
  shall name <span class='texttt'>T1</span>; otherwise, it shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_pointer'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_pointer;</span>                       </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type or a
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) or a
  (possibly cv-qualified) <span class='texttt'>void</span> type then
  the member typedef <span class='texttt'>type</span> shall name the same type as
  <span class='texttt'>remove_reference_t&lt;T&gt;*</span>;
