--- a/meta.unary.html
+++ b/meta.unary.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang='en'><head><title>[meta.unary]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.15</a> Metaprogramming and type traits <a class='abbr_ref' href='meta#unary'>[meta]</a></h2><div id='meta.unary'><h3 ><a class='secnum' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref'>[meta.unary]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This sub-clause contains templates that may be used to query the
+<!DOCTYPE html><html lang='en'><head><title>[meta.unary]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>20</a> General utilities library <a class='abbr_ref' href='./#utilities'>[utilities]</a></h1><h2 ><a class='secnum' style='min-width:88pt'>20.15</a> Metaprogramming and type traits <a class='abbr_ref' href='meta#unary'>[meta]</a></h2><div id='meta.unary'><h3 ><a class='secnum' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref'>[meta.unary]</a></h3><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >This subclause contains templates that may be used to query the
 properties of a type at compile time.</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >Each of these templates shall be a
 UnaryTypeTrait (<a href='meta.rqmts'>[meta.rqmts]</a>)
 with a BaseCharacteristic of
@@ -82,11 +82,11 @@ categories, corresponding to the descriptions given in section <a href='basic.ty
  <span class='texttt'>T</span> is a pointer to non-static data member
  or non-static member function             </td><td class='left'>   </td></tr></table></div></div></div><div id='prop'><h4 ><a class='secnum' href='#prop' style='min-width:118pt'>20.15.4.3</a> Type properties <a class='abbr_ref' href='meta.unary.prop'>[meta.unary.prop]</a></h4><div class='para' id='prop-1'><div class='marginalizedparent'><a class='marginalized' href='#prop-1'>1</a></div><p >These templates provide access to some of the more important
 properties of types.</p></div><div class='para' id='prop-2'><div class='marginalizedparent'><a class='marginalized' href='#prop-2'>2</a></div><p >It is unspecified whether the library defines any full or partial
-specializations of any of these templates.</p></div><div class='para' id='prop-3'><div class='marginalizedparent'><a class='marginalized' href='#prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this sub-clause,
+specializations of any of these templates.</p></div><div class='para' id='prop-3'><div class='marginalizedparent'><a class='marginalized' href='#prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this subclause,
 instantiating that template with a template-argument that is a class
 template specialization may result in the implicit instantiation of
 the template argument if and only if the semantics of <span class='texttt'>X</span> require that
-the argument must be a complete type.</p></div><div class='para' id='prop-4'><div class='marginalizedparent'><a class='marginalized' href='#prop-4'>4</a></div><p >For the purpose of defining the templates in this sub-clause,
+the argument must be a complete type.</p></div><div class='para' id='prop-4'><div class='marginalizedparent'><a class='marginalized' href='#prop-4'>4</a></div><p >For the purpose of defining the templates in this subclause,
 a function call expression <span class='texttt'>declval&lt;T&gt;()</span> for any type <span class='texttt'>T</span>
 is considered to be a trivial (<a href='basic.types'>[basic.types]</a>, <a href='special'>[special]</a>) function call
 that is not an odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>) of <span class='texttt'>declval</span>
@@ -151,7 +151,7 @@ notwithstanding the restrictions of <a href='declval'>[declval]</a>.</p><div cla
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_copy_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
   <span class='texttt'>struct is_copy_constructible;</span> </td><td class='left'>
-  For a referenceable type <span class='texttt'>T</span>, the same result as
+  For a referenceable type <span class='texttt'>T</span> (<a href='defns.referenceable'>[defns.referenceable]</a>), the same result as
   <span class='texttt'>is_constructible_v&lt;T, const T&amp;&gt;</span>, otherwise <span class='texttt'>false</span>. </td><td class='left'>
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_move_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
