--- a/numerics.html
+++ b/numerics.html
@@ -1673,7 +1673,7 @@ involving the value(s) of its non-type template parameter(s), to hold.
 A program instantiating any of these templates
 is ill-formed
 if any such required relationship fails to hold.</p></div><div class='para' id='rand.eng-7'><div class='marginalizedparent'><a class='marginalized' href='#rand.eng-7'>7</a></div><p >For every random number engine and for every random number engine adaptor <span class='texttt'>X</span>
-defined in this sub-clause (<a href='rand.eng'>[rand.eng]</a>) and in sub-clause <a href='rand.adapt'>[rand.adapt]</a>:</p><ul ><li ><p >if the constructor
+defined in this subclause (<a href='rand.eng'>[rand.eng]</a>) and in sub-clause <a href='rand.adapt'>[rand.adapt]</a>:</p><ul ><li ><p >if the constructor
 </p><pre class='codeblock'>
 template &lt;class Sseq&gt; explicit X(Sseq&amp; q);
 </pre><p >is called with a type <span class='texttt'>Sseq</span> that does not qualify as a seed sequence, then this
