--- a/tab.html
+++ b/tab.html
@@ -836,7 +836,7 @@ but not pointers to non-static members.                        </td></tr><tr cla
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_copy_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
   <span class='texttt'>struct is_copy_constructible;</span> </td><td class='left'>
-  For a referenceable type <span class='texttt'>T</span>, the same result as
+  For a referenceable type <span class='texttt'>T</span> (<a href='defns.referenceable'>[defns.referenceable]</a>), the same result as
   <span class='texttt'>is_constructible_v&lt;T, const T&amp;&gt;</span>, otherwise <span class='texttt'>false</span>. </td><td class='left'>
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_move_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
@@ -1120,7 +1120,7 @@ not possibly cv-qualified versions of the same type,
  member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T1</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_lvalue_reference'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_lvalue_reference;</span>                     </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type then
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) then
  the member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T&amp;</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.
  [&nbsp;<i>Note:</i><span class='space'></span>
@@ -1180,7 +1180,7 @@ not possibly cv-qualified versions of the same type,
  to <span class='texttt'>T1</span>” then the member typedef <span class='texttt'>type</span>
  shall name <span class='texttt'>T1</span>; otherwise, it shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_pointer'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_pointer;</span>                       </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type or a
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) or a
  (possibly cv-qualified) <span class='texttt'>void</span> type then
  the member typedef <span class='texttt'>type</span> shall name the same type as
  <span class='texttt'>remove_reference_t&lt;T&gt;*</span>;
