--- a/utilities.html
+++ b/utilities.html
@@ -3842,7 +3842,7 @@ template &lt;class T, class U&gt;
   bool operator!=(const allocator&lt;T&gt;&amp;, const allocator&lt;U&gt;&amp;) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='allocator.globals-2'><div class='marginalizedparent'><a class='marginalized' href='#allocator.globals-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>false</span>.
-</p></div></div></div></div><div id='specialized.algorithms'><h3 ><a class='secnum' href='#specialized.algorithms' style='min-width:103pt'>20.10.10</a> Specialized algorithms <a class='abbr_ref' href='specialized.algorithms'>[specialized.algorithms]</a></h3><div class='para' id='specialized.algorithms-1'><div class='marginalizedparent'><a class='marginalized' href='#specialized.algorithms-1'>1</a></div><p >Throughout this sub-clause,
+</p></div></div></div></div><div id='specialized.algorithms'><h3 ><a class='secnum' href='#specialized.algorithms' style='min-width:103pt'>20.10.10</a> Specialized algorithms <a class='abbr_ref' href='specialized.algorithms'>[specialized.algorithms]</a></h3><div class='para' id='specialized.algorithms-1'><div class='marginalizedparent'><a class='marginalized' href='#specialized.algorithms-1'>1</a></div><p >Throughout this subclause,
 the names of template parameters are used to express type requirements.
 </p><ul ><li ><p >If an algorithm's template parameter is named <span class='texttt'>InputIterator</span>,
 the template argument shall satisfy the requirements
@@ -7286,12 +7286,12 @@ template &lt;class R, class... ArgTypes&gt;
 template&lt;class R, class... ArgTypes&gt;
   void swap(function&lt;R(ArgTypes...)&gt;&amp; f1, function&lt;R(ArgTypes...)&gt;&amp; f2);
 </code></p><div class='itemdescr'></div><div class='para' id='func.wrap.func.alg-1'><div class='marginalizedparent'><a class='marginalized' href='#func.wrap.func.alg-1'>1</a></div><div class='itemdescr'><p ><i>Effects:</i> As if by: <span class='texttt'>f1.swap(f2);</span>
-</p></div></div><p ><span class='indexparent'><a class='index' id='function_object,wrapper'></a></span></p></div></div></div><div id='func.searchers'><h3 ><a class='secnum' href='#func.searchers' style='min-width:103pt'>20.14.13</a> Searchers <a class='abbr_ref' href='func.searchers'>[func.searchers]</a></h3><div class='para' id='func.searchers-1'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-1'>1</a></div><p >This sub-clause provides function object types (<a href='function.objects'>[function.objects]</a>) for
+</p></div></div><p ><span class='indexparent'><a class='index' id='function_object,wrapper'></a></span></p></div></div></div><div id='func.searchers'><h3 ><a class='secnum' href='#func.searchers' style='min-width:103pt'>20.14.13</a> Searchers <a class='abbr_ref' href='func.searchers'>[func.searchers]</a></h3><div class='para' id='func.searchers-1'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-1'>1</a></div><p >This subclause provides function object types (<a href='function.objects'>[function.objects]</a>) for
 operations that search for a sequence <span class='texttt'>[pat_first, <span class='discretionary'></span>pat_last)</span> in another
 sequence <span class='texttt'>[first, <span class='discretionary'></span>last)</span> that is provided to the object's function call
 operator.  The first sequence (the pattern to be searched for) is provided to
 the object's constructor, and the second (the sequence to be searched) is
-provided to the function call operator.</p></div><div class='para' id='func.searchers-2'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-2'>2</a></div><p >Each specialization of a class template specified in this sub-clause <a href='func.searchers'>[func.searchers]</a> shall meet the <span class='texttt'>CopyConstructible</span> and <span class='texttt'>CopyAssignable</span> requirements.
+provided to the function call operator.</p></div><div class='para' id='func.searchers-2'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-2'>2</a></div><p >Each specialization of a class template specified in this subclause <a href='func.searchers'>[func.searchers]</a> shall meet the <span class='texttt'>CopyConstructible</span> and <span class='texttt'>CopyAssignable</span> requirements.
 Template parameters named
 </p><ul ><li ><p ><span class='texttt'>ForwardIterator</span>,
 </p></li><li ><p ><span class='texttt'>ForwardIterator1</span>,
@@ -7300,7 +7300,7 @@ Template parameters named
 </p></li><li ><p ><span class='texttt'>RandomAccessIterator1</span>,
 </p></li><li ><p ><span class='texttt'>RandomAccessIterator2</span>, and
 </p></li><li ><p ><span class='texttt'>BinaryPredicate</span>
-</p></li></ul><p >of templates specified in this sub-clause
+</p></li></ul><p >of templates specified in this subclause
 <a href='func.searchers'>[func.searchers]</a> shall meet the same requirements and semantics as
 specified in <a href='algorithms.general'>[algorithms.general]</a>.
 Template parameters named <span class='texttt'>Hash</span> shall meet the requirements as specified in <a href='hash.requirements'>[hash.requirements]</a>.</p></div><div class='para' id='func.searchers-3'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-3'>3</a></div><p >The Boyer-Moore searcher implements the Boyer-Moore search algorithm.
@@ -7969,7 +7969,7 @@ alias template <span class='texttt'>bool_constant</span>, and
 its associated <i ><a href='dcl.typedef#nt:typedef-name'>typedef-names</a></i>
 <span class='texttt'>true_type</span> and <span class='texttt'>false_type</span>
 are used as base classes to define
-the interface for various type traits.</p></div></div><div id='meta.unary'><h3 ><a class='secnum' href='#meta.unary' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref' href='meta.unary'>[meta.unary]</a></h3><div class='para' id='meta.unary-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary-1'>1</a></div><p >This sub-clause contains templates that may be used to query the
+the interface for various type traits.</p></div></div><div id='meta.unary'><h3 ><a class='secnum' href='#meta.unary' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref' href='meta.unary'>[meta.unary]</a></h3><div class='para' id='meta.unary-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary-1'>1</a></div><p >This subclause contains templates that may be used to query the
 properties of a type at compile time.</p></div><div class='para' id='meta.unary-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary-2'>2</a></div><p >Each of these templates shall be a
 UnaryTypeTrait (<a href='meta.rqmts'>[meta.rqmts]</a>)
 with a BaseCharacteristic of
@@ -8053,11 +8053,11 @@ categories, corresponding to the descriptions given in section <a href='basic.ty
  <span class='texttt'>T</span> is a pointer to non-static data member
  or non-static member function             </td><td class='left'>   </td></tr></table></div></div></div><div id='meta.unary.prop'><h4 ><a class='secnum' href='#meta.unary.prop' style='min-width:118pt'>20.15.4.3</a> Type properties <a class='abbr_ref' href='meta.unary.prop'>[meta.unary.prop]</a></h4><div class='para' id='meta.unary.prop-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-1'>1</a></div><p >These templates provide access to some of the more important
 properties of types.</p></div><div class='para' id='meta.unary.prop-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-2'>2</a></div><p >It is unspecified whether the library defines any full or partial
-specializations of any of these templates.</p></div><div class='para' id='meta.unary.prop-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this sub-clause,
+specializations of any of these templates.</p></div><div class='para' id='meta.unary.prop-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this subclause,
 instantiating that template with a template-argument that is a class
 template specialization may result in the implicit instantiation of
 the template argument if and only if the semantics of <span class='texttt'>X</span> require that
-the argument must be a complete type.</p></div><div class='para' id='meta.unary.prop-4'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-4'>4</a></div><p >For the purpose of defining the templates in this sub-clause,
+the argument must be a complete type.</p></div><div class='para' id='meta.unary.prop-4'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop-4'>4</a></div><p >For the purpose of defining the templates in this subclause,
 a function call expression <span class='texttt'>declval&lt;T&gt;()</span> for any type <span class='texttt'>T</span>
 is considered to be a trivial (<a href='basic.types'>[basic.types]</a>, <a href='special'>[special]</a>) function call
 that is not an odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>) of <span class='texttt'>declval</span>
@@ -8122,7 +8122,7 @@ notwithstanding the restrictions of <a href='declval'>[declval]</a>.</p><div cla
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_copy_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
   <span class='texttt'>struct is_copy_constructible;</span> </td><td class='left'>
-  For a referenceable type <span class='texttt'>T</span>, the same result as
+  For a referenceable type <span class='texttt'>T</span> (<a href='defns.referenceable'>[defns.referenceable]</a>), the same result as
   <span class='texttt'>is_constructible_v&lt;T, const T&amp;&gt;</span>, otherwise <span class='texttt'>false</span>. </td><td class='left'>
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_move_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
@@ -8360,7 +8360,7 @@ if they have the same active member and the corresponding members have the same 
 </p></li></ul><p >The set of scalar types for which this condition holds is
 <span class='indexparent'><a class='index' id='which_scalar_types_have_unique_object_representations'></a></span>implementation-defined.
 [&nbsp;<i>Note:</i><span class='space'></span> If a type has padding bits, the condition does not hold;
-otherwise, the condition holds true for unsigned integral types. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='meta.unary.prop.query'><h3 ><a class='secnum' href='#meta.unary.prop.query' style='min-width:103pt'>20.15.5</a> Type property queries <a class='abbr_ref' href='meta.unary.prop.query'>[meta.unary.prop.query]</a></h3><div class='para' id='meta.unary.prop.query-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop.query-1'>1</a></div><p >This sub-clause contains templates that may be used to query
+otherwise, the condition holds true for unsigned integral types. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='meta.unary.prop.query'><h3 ><a class='secnum' href='#meta.unary.prop.query' style='min-width:103pt'>20.15.5</a> Type property queries <a class='abbr_ref' href='meta.unary.prop.query'>[meta.unary.prop.query]</a></h3><div class='para' id='meta.unary.prop.query-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.unary.prop.query-1'>1</a></div><p >This subclause contains templates that may be used to query
 properties of types at compile time.</p><div class='numberedTable' id='tab:type-traits.properties.queries'>Table <a href='#tab:type-traits.properties.queries'>36</a> — Type property queries<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Value</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span><span class='indexparent'><a class='index' id='alignment_of'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct alignment_of;</span>      </td><td class='left'>
@@ -8394,7 +8394,7 @@ assert((extent_v&lt;int, 1&gt;) == 0);
 assert((extent_v&lt;int[2], 1&gt;) == 0);
 assert((extent_v&lt;int[2][4], 1&gt;) == 4);
 assert((extent_v&lt;int[][4], 1&gt;) == 4);
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='meta.rel'><h3 ><a class='secnum' href='#meta.rel' style='min-width:103pt'>20.15.6</a> Relationships between types <a class='abbr_ref' href='meta.rel'>[meta.rel]</a></h3><div class='para' id='meta.rel-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.rel-1'>1</a></div><p >This sub-clause contains templates that may be used to query
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='meta.rel'><h3 ><a class='secnum' href='#meta.rel' style='min-width:103pt'>20.15.6</a> Relationships between types <a class='abbr_ref' href='meta.rel'>[meta.rel]</a></h3><div class='para' id='meta.rel-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.rel-1'>1</a></div><p >This subclause contains templates that may be used to query
 relationships between types at compile time.</p></div><div class='para' id='meta.rel-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.rel-2'>2</a></div><p >Each of these templates shall be a
 BinaryTypeTrait (<a href='meta.rqmts'>[meta.rqmts]</a>)
 with a BaseCharacteristic of
@@ -8436,7 +8436,7 @@ not possibly cv-qualified versions of the same type,
  is known not to throw any exceptions                                 </td><td class='left'>
  <span class='texttt'>Fn</span>, <span class='texttt'>R</span>, and all types in the parameter pack <span class='texttt'>ArgTypes</span>
  shall be complete types, (possibly cv-qualified) <span class='texttt'>void</span>, or
- arrays of unknown bound.                                             </td></tr></table></div></div><div class='para' id='meta.rel-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.rel-3'>3</a></div><p >For the purpose of defining the templates in this sub-clause,
+ arrays of unknown bound.                                             </td></tr></table></div></div><div class='para' id='meta.rel-3'><div class='marginalizedparent'><a class='marginalized' href='#meta.rel-3'>3</a></div><p >For the purpose of defining the templates in this subclause,
 a function call expression <span class='texttt'>declval&lt;T&gt;()</span> for any type <span class='texttt'>T</span>
 is considered to be a trivial (<a href='basic.types'>[basic.types]</a>, <a href='special'>[special]</a>) function call
 that is not an odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>) of <span class='texttt'>declval</span>
@@ -8471,7 +8471,7 @@ evaluation of the conversion can result in side effects such as the
 instantiation of class template specializations and function template
 specializations, the generation of implicitly-defined functions, and so on. Such
 side effects are not in the “immediate context” and can result in the program
-being ill-formed. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='meta.trans'><h3 ><a class='secnum' href='#meta.trans' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref' href='meta.trans'>[meta.trans]</a></h3><div class='para' id='meta.trans-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.trans-1'>1</a></div><p >This sub-clause contains templates that may be used to transform one
+being ill-formed. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='meta.trans'><h3 ><a class='secnum' href='#meta.trans' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref' href='meta.trans'>[meta.trans]</a></h3><div class='para' id='meta.trans-1'><div class='marginalizedparent'><a class='marginalized' href='#meta.trans-1'>1</a></div><p >This subclause contains templates that may be used to transform one
 type to another following some predefined rule.</p></div><div class='para' id='meta.trans-2'><div class='marginalizedparent'><a class='marginalized' href='#meta.trans-2'>2</a></div><p >Each of the templates in this subclause shall be a
 <a class='hidden_link' href='#def:TransformationTrait' id='def:TransformationTrait'><i>TransformationTrait</i></a> (<a href='meta.rqmts'>[meta.rqmts]</a>).</p></div><div id='meta.trans.cv'><h4 ><a class='secnum' href='#meta.trans.cv' style='min-width:118pt'>20.15.7.1</a> Const-volatile modifications <a class='abbr_ref' href='meta.trans.cv'>[meta.trans.cv]</a></h4><div class='numberedTable' id='tab:type-traits.const-volatile'>Table <a href='#tab:type-traits.const-volatile'>38</a> — Const-volatile modifications<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span><span class='indexparent'><a class='index' id='remove_const'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
@@ -8516,7 +8516,7 @@ type to another following some predefined rule.</p></div><div class='para' id='m
  member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T1</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_lvalue_reference'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_lvalue_reference;</span>                     </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type then
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) then
  the member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T&amp;</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.
  [&nbsp;<i>Note:</i><span class='space'></span>
@@ -8590,7 +8590,7 @@ assert((is_same_v&lt;remove_all_extents_t&lt;int[][3]&gt;, int&gt;));
  to <span class='texttt'>T1</span>” then the member typedef <span class='texttt'>type</span>
  shall name <span class='texttt'>T1</span>; otherwise, it shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_pointer'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_pointer;</span>                       </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type or a
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) or a
  (possibly cv-qualified) <span class='texttt'>void</span> type then
  the member typedef <span class='texttt'>type</span> shall name the same type as
  <span class='texttt'>remove_reference_t&lt;T&gt;*</span>;
