--- a/algorithms.html
+++ b/algorithms.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang='en'><head><title>[algorithms]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><div id='algorithms'><h1 ><a class='secnum' style='min-width:73pt'>25</a> Algorithms library <a class='abbr_ref' href='./#algorithms'>[algorithms]</a></h1><div id='general'><h2 ><a class='secnum' href='#general' style='min-width:88pt'>25.1</a> General <a class='abbr_ref' href='algorithms.general'>[algorithms.general]</a></h2><div class='para' id='general-1'><div class='marginalizedparent'><a class='marginalized' href='#general-1'>1</a></div><p >This Clause describes components that C++ programs may use to perform
 algorithmic operations on containers (Clause <a href='containers'>[containers]</a>) and other sequences.</p></div><div class='para' id='general-2'><div class='marginalizedparent'><a class='marginalized' href='#general-2'>2</a></div><p >The following subclauses describe components for
-non-modifying sequence operation,
+non-modifying sequence operations,
 modifying sequence operations,
 sorting and related operations,
 and algorithms from the ISO C library,
