--- a/dcl.align.html
+++ b/dcl.align.html
@@ -14,9 +14,9 @@ An <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifier</a>
 value (<a href='basic.align'>[basic.align]</a>), or evaluates to an extended alignment and
 the implementation does not support that alignment in the context of the
 declaration, the program is ill-formed.
-</p></li></ul></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >When the <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifier</a></i> is of the form
-<span class='texttt'>alignas(</span> <i ><a href='dcl.name#nt:type-id'>type-id</a></i> <span class='texttt'>)</span>, it shall have the same
-effect as <span class='texttt'>alignas(<span class='discretionary'></span>alignof(</span><i ><a href='dcl.name#nt:type-id'>type-id</a></i><span class='texttt'>))</span> (<a href='expr.alignof'>[expr.alignof]</a>).</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >The alignment requirement of an entity is the strictest non-zero alignment
+</p></li></ul></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >An <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifier</a></i> of the form
+<span class='texttt'>alignas(</span> <i ><a href='dcl.name#nt:type-id'>type-id</a></i> <span class='texttt'>)</span> has the same
+effect as <span class='texttt'>alignas(<span class='discretionary'></span>alignof(</span> <i ><a href='dcl.name#nt:type-id'>type-id</a></i> <span class='texttt'>))</span> (<a href='expr.alignof'>[expr.alignof]</a>).</p></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><p >The alignment requirement of an entity is the strictest non-zero alignment
 specified by its <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifiers</a></i>, if any;
 otherwise, the <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifiers</a></i> have no effect.</p></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><p >The combined effect of all <i ><a href='dcl.attr.grammar#nt:alignment-specifier'>alignment-specifiers</a></i> in a declaration shall not
 specify an alignment that is less strict than the alignment that would
