--- a/expr.const.html
+++ b/expr.const.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='en'><head><title>[expr.const]</title><meta charset='UTF-8'/><link rel='stylesheet' type='text/css' href='14882.css'/></head><body><div class='wrapper'><h1 ><a class='secnum' style='min-width:73pt'>5</a> Expressions <a class='abbr_ref' href='./#expr'>[expr]</a></h1><div id='expr.const'><h2 ><a class='secnum' style='min-width:88pt'>5.20</a> Constant expressions <a class='abbr_ref'>[expr.const]</a></h2><p ><span class='indexparent'><a class='index' id='expression,constant'></a></span></p><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><p >Certain contexts require expressions that satisfy additional
-requirements as detailed in this sub-clause; other contexts have different
+requirements as detailed in this subclause; other contexts have different
 semantics depending on whether or not an expression satisfies these requirements.
 Expressions that satisfy these requirements,
 assuming that copy elision is performed,
