--- a/expr.html
+++ b/expr.html
@@ -2965,7 +2965,7 @@ f(a, (t=3, t+2), c);
 </pre><p >has three arguments, the second of which has the value
 <span class='texttt'>5</span>.
 <i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='const'><h2 ><a class='secnum' href='#const' style='min-width:88pt'>5.20</a> Constant expressions <a class='abbr_ref' href='expr.const'>[expr.const]</a></h2><p ><span class='indexparent'><a class='index' id='expression,constant'></a></span></p><div class='para' id='const-1'><div class='marginalizedparent'><a class='marginalized' href='#const-1'>1</a></div><p >Certain contexts require expressions that satisfy additional
-requirements as detailed in this sub-clause; other contexts have different
+requirements as detailed in this subclause; other contexts have different
 semantics depending on whether or not an expression satisfies these requirements.
 Expressions that satisfy these requirements,
 assuming that copy elision is performed,
