--- a/memory.html
+++ b/memory.html
@@ -637,7 +637,7 @@ template &lt;class T, class U&gt;
   bool operator!=(const allocator&lt;T&gt;&amp;, const allocator&lt;U&gt;&amp;) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='allocator.globals-2'><div class='marginalizedparent'><a class='marginalized' href='#allocator.globals-2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
 <span class='texttt'>false</span>.
-</p></div></div></div></div><div id='specialized.algorithms'><h3 ><a class='secnum' href='#specialized.algorithms' style='min-width:103pt'>20.10.10</a> Specialized algorithms <a class='abbr_ref' href='specialized.algorithms'>[specialized.algorithms]</a></h3><div class='para' id='specialized.algorithms-1'><div class='marginalizedparent'><a class='marginalized' href='#specialized.algorithms-1'>1</a></div><p >Throughout this sub-clause,
+</p></div></div></div></div><div id='specialized.algorithms'><h3 ><a class='secnum' href='#specialized.algorithms' style='min-width:103pt'>20.10.10</a> Specialized algorithms <a class='abbr_ref' href='specialized.algorithms'>[specialized.algorithms]</a></h3><div class='para' id='specialized.algorithms-1'><div class='marginalizedparent'><a class='marginalized' href='#specialized.algorithms-1'>1</a></div><p >Throughout this subclause,
 the names of template parameters are used to express type requirements.
 </p><ul ><li ><p >If an algorithm's template parameter is named <span class='texttt'>InputIterator</span>,
 the template argument shall satisfy the requirements
