--- a/meta.html
+++ b/meta.html
@@ -420,7 +420,7 @@ alias template <span class='texttt'>bool_constant</span>, and
 its associated <i ><a href='dcl.typedef#nt:typedef-name'>typedef-names</a></i>
 <span class='texttt'>true_type</span> and <span class='texttt'>false_type</span>
 are used as base classes to define
-the interface for various type traits.</p></div></div><div id='unary'><h3 ><a class='secnum' href='#unary' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref' href='meta.unary'>[meta.unary]</a></h3><div class='para' id='unary-1'><div class='marginalizedparent'><a class='marginalized' href='#unary-1'>1</a></div><p >This sub-clause contains templates that may be used to query the
+the interface for various type traits.</p></div></div><div id='unary'><h3 ><a class='secnum' href='#unary' style='min-width:103pt'>20.15.4</a> Unary type traits <a class='abbr_ref' href='meta.unary'>[meta.unary]</a></h3><div class='para' id='unary-1'><div class='marginalizedparent'><a class='marginalized' href='#unary-1'>1</a></div><p >This subclause contains templates that may be used to query the
 properties of a type at compile time.</p></div><div class='para' id='unary-2'><div class='marginalizedparent'><a class='marginalized' href='#unary-2'>2</a></div><p >Each of these templates shall be a
 UnaryTypeTrait (<a href='meta.rqmts'>[meta.rqmts]</a>)
 with a BaseCharacteristic of
@@ -504,11 +504,11 @@ categories, corresponding to the descriptions given in section <a href='basic.ty
  <span class='texttt'>T</span> is a pointer to non-static data member
  or non-static member function             </td><td class='left'>   </td></tr></table></div></div></div><div id='unary.prop'><h4 ><a class='secnum' href='#unary.prop' style='min-width:118pt'>20.15.4.3</a> Type properties <a class='abbr_ref' href='meta.unary.prop'>[meta.unary.prop]</a></h4><div class='para' id='unary.prop-1'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-1'>1</a></div><p >These templates provide access to some of the more important
 properties of types.</p></div><div class='para' id='unary.prop-2'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-2'>2</a></div><p >It is unspecified whether the library defines any full or partial
-specializations of any of these templates.</p></div><div class='para' id='unary.prop-3'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this sub-clause,
+specializations of any of these templates.</p></div><div class='para' id='unary.prop-3'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-3'>3</a></div><p >For all of the class templates <span class='texttt'>X</span> declared in this subclause,
 instantiating that template with a template-argument that is a class
 template specialization may result in the implicit instantiation of
 the template argument if and only if the semantics of <span class='texttt'>X</span> require that
-the argument must be a complete type.</p></div><div class='para' id='unary.prop-4'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-4'>4</a></div><p >For the purpose of defining the templates in this sub-clause,
+the argument must be a complete type.</p></div><div class='para' id='unary.prop-4'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop-4'>4</a></div><p >For the purpose of defining the templates in this subclause,
 a function call expression <span class='texttt'>declval&lt;T&gt;()</span> for any type <span class='texttt'>T</span>
 is considered to be a trivial (<a href='basic.types'>[basic.types]</a>, <a href='special'>[special]</a>) function call
 that is not an odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>) of <span class='texttt'>declval</span>
@@ -573,7 +573,7 @@ notwithstanding the restrictions of <a href='declval'>[declval]</a>.</p><div cla
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_copy_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
   <span class='texttt'>struct is_copy_constructible;</span> </td><td class='left'>
-  For a referenceable type <span class='texttt'>T</span>, the same result as
+  For a referenceable type <span class='texttt'>T</span> (<a href='defns.referenceable'>[defns.referenceable]</a>), the same result as
   <span class='texttt'>is_constructible_v&lt;T, const T&amp;&gt;</span>, otherwise <span class='texttt'>false</span>. </td><td class='left'>
   <span class='texttt'>T</span> shall be a complete type, (possibly cv-qualified) <span class='texttt'>void</span>,
   or an array of unknown bound. </td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='is_move_constructible'></a></span><span class='texttt'>template &lt;class T&gt;</span><span class='hfill'></span><br/>
@@ -811,7 +811,7 @@ if they have the same active member and the corresponding members have the same 
 </p></li></ul><p >The set of scalar types for which this condition holds is
 <span class='indexparent'><a class='index' id='which_scalar_types_have_unique_object_representations'></a></span>implementation-defined.
 [&nbsp;<i>Note:</i><span class='space'></span> If a type has padding bits, the condition does not hold;
-otherwise, the condition holds true for unsigned integral types. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='unary.prop.query'><h3 ><a class='secnum' href='#unary.prop.query' style='min-width:103pt'>20.15.5</a> Type property queries <a class='abbr_ref' href='meta.unary.prop.query'>[meta.unary.prop.query]</a></h3><div class='para' id='unary.prop.query-1'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop.query-1'>1</a></div><p >This sub-clause contains templates that may be used to query
+otherwise, the condition holds true for unsigned integral types. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div></div><div id='unary.prop.query'><h3 ><a class='secnum' href='#unary.prop.query' style='min-width:103pt'>20.15.5</a> Type property queries <a class='abbr_ref' href='meta.unary.prop.query'>[meta.unary.prop.query]</a></h3><div class='para' id='unary.prop.query-1'><div class='marginalizedparent'><a class='marginalized' href='#unary.prop.query-1'>1</a></div><p >This subclause contains templates that may be used to query
 properties of types at compile time.</p><div class='numberedTable' id='tab:type-traits.properties.queries'>Table <a href='#tab:type-traits.properties.queries'>36</a> — Type property queries<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Value</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span><span class='indexparent'><a class='index' id='alignment_of'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct alignment_of;</span>      </td><td class='left'>
@@ -845,7 +845,7 @@ assert((extent_v&lt;int, 1&gt;) == 0);
 assert((extent_v&lt;int[2], 1&gt;) == 0);
 assert((extent_v&lt;int[2][4], 1&gt;) == 4);
 assert((extent_v&lt;int[][4], 1&gt;) == 4);
-</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='rel'><h3 ><a class='secnum' href='#rel' style='min-width:103pt'>20.15.6</a> Relationships between types <a class='abbr_ref' href='meta.rel'>[meta.rel]</a></h3><div class='para' id='rel-1'><div class='marginalizedparent'><a class='marginalized' href='#rel-1'>1</a></div><p >This sub-clause contains templates that may be used to query
+</pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div></div><div id='rel'><h3 ><a class='secnum' href='#rel' style='min-width:103pt'>20.15.6</a> Relationships between types <a class='abbr_ref' href='meta.rel'>[meta.rel]</a></h3><div class='para' id='rel-1'><div class='marginalizedparent'><a class='marginalized' href='#rel-1'>1</a></div><p >This subclause contains templates that may be used to query
 relationships between types at compile time.</p></div><div class='para' id='rel-2'><div class='marginalizedparent'><a class='marginalized' href='#rel-2'>2</a></div><p >Each of these templates shall be a
 BinaryTypeTrait (<a href='meta.rqmts'>[meta.rqmts]</a>)
 with a BaseCharacteristic of
@@ -887,7 +887,7 @@ not possibly cv-qualified versions of the same type,
  is known not to throw any exceptions                                 </td><td class='left'>
  <span class='texttt'>Fn</span>, <span class='texttt'>R</span>, and all types in the parameter pack <span class='texttt'>ArgTypes</span>
  shall be complete types, (possibly cv-qualified) <span class='texttt'>void</span>, or
- arrays of unknown bound.                                             </td></tr></table></div></div><div class='para' id='rel-3'><div class='marginalizedparent'><a class='marginalized' href='#rel-3'>3</a></div><p >For the purpose of defining the templates in this sub-clause,
+ arrays of unknown bound.                                             </td></tr></table></div></div><div class='para' id='rel-3'><div class='marginalizedparent'><a class='marginalized' href='#rel-3'>3</a></div><p >For the purpose of defining the templates in this subclause,
 a function call expression <span class='texttt'>declval&lt;T&gt;()</span> for any type <span class='texttt'>T</span>
 is considered to be a trivial (<a href='basic.types'>[basic.types]</a>, <a href='special'>[special]</a>) function call
 that is not an odr-use (<a href='basic.def.odr'>[basic.def.odr]</a>) of <span class='texttt'>declval</span>
@@ -922,7 +922,7 @@ evaluation of the conversion can result in side effects such as the
 instantiation of class template specializations and function template
 specializations, the generation of implicitly-defined functions, and so on. Such
 side effects are not in the “immediate context” and can result in the program
-being ill-formed. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='trans'><h3 ><a class='secnum' href='#trans' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref' href='meta.trans'>[meta.trans]</a></h3><div class='para' id='trans-1'><div class='marginalizedparent'><a class='marginalized' href='#trans-1'>1</a></div><p >This sub-clause contains templates that may be used to transform one
+being ill-formed. <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div></div><div id='trans'><h3 ><a class='secnum' href='#trans' style='min-width:103pt'>20.15.7</a> Transformations between types <a class='abbr_ref' href='meta.trans'>[meta.trans]</a></h3><div class='para' id='trans-1'><div class='marginalizedparent'><a class='marginalized' href='#trans-1'>1</a></div><p >This subclause contains templates that may be used to transform one
 type to another following some predefined rule.</p></div><div class='para' id='trans-2'><div class='marginalizedparent'><a class='marginalized' href='#trans-2'>2</a></div><p >Each of the templates in this subclause shall be a
 <a class='hidden_link' href='#def:TransformationTrait' id='def:TransformationTrait'><i>TransformationTrait</i></a> (<a href='meta.rqmts'>[meta.rqmts]</a>).</p></div><div id='trans.cv'><h4 ><a class='secnum' href='#trans.cv' style='min-width:118pt'>20.15.7.1</a> Const-volatile modifications <a class='abbr_ref' href='meta.trans.cv'>[meta.trans.cv]</a></h4><div class='numberedTable' id='tab:type-traits.const-volatile'>Table <a href='#tab:type-traits.const-volatile'>38</a> — Const-volatile modifications<br><table ><tr class='rowsep'><td colspan='1' class='center'><b>Template</b></td><td colspan='1' class='center'><b>Comments</b></td></tr><tr class='capsep'><td class='left'> 
 <span class='endhead'></span><span class='indexparent'><a class='index' id='remove_const'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
@@ -967,7 +967,7 @@ type to another following some predefined rule.</p></div><div class='para' id='t
  member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T1</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_lvalue_reference'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_lvalue_reference;</span>                     </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type then
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) then
  the member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T&amp;</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.
  [&nbsp;<i>Note:</i><span class='space'></span>
@@ -1041,7 +1041,7 @@ assert((is_same_v&lt;remove_all_extents_t&lt;int[][3]&gt;, int&gt;));
  to <span class='texttt'>T1</span>” then the member typedef <span class='texttt'>type</span>
  shall name <span class='texttt'>T1</span>; otherwise, it shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_pointer'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_pointer;</span>                       </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type or a
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) or a
  (possibly cv-qualified) <span class='texttt'>void</span> type then
  the member typedef <span class='texttt'>type</span> shall name the same type as
  <span class='texttt'>remove_reference_t&lt;T&gt;*</span>;
