--- a/meta.trans.ref.html
+++ b/meta.trans.ref.html
@@ -5,7 +5,7 @@
  member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T1</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.</td></tr><tr class='rowsep'><td class='left'> <span class='indexparent'><a class='index' id='add_lvalue_reference'></a></span><span class='texttt'>template &lt;class T&gt;<span class='hfill'></span><br/>
  struct add_lvalue_reference;</span>                     </td><td class='left'>
- If <span class='texttt'>T</span> names a referenceable type then
+ If <span class='texttt'>T</span> names a referenceable type (<a href='defns.referenceable'>[defns.referenceable]</a>) then
  the member typedef <span class='texttt'>type</span> shall name <span class='texttt'>T&amp;</span>;
  otherwise, <span class='texttt'>type</span> shall name <span class='texttt'>T</span>.
  [&nbsp;<i>Note:</i><span class='space'></span>
